--- a/html/index.html
+++ b/html/index.html
@@ -20,47 +20,49 @@
                         <dd><a href="javascript:;">部门管理</a></dd>
                         <dd><a href="javascript:;">职工管理</a></dd>
                         <dd><a href="javascript:;">学员管理</a></dd>
+                        <dd><a href="javascript:;">物资管理</a></dd>
                     </dl>
                 </li>
-                <!-- <li class="layui-nav-item"><a href="javascript:;">公告安排</a></li> -->
-                <li class="layui-nav-item"><a href="javascript:;">物资管理</a></li>
                 <li class="layui-nav-item"><a href="javascript:;">照片墙</a></li>
             </ul>
         </section>
-        <section class="right">
-            <ul class="layui-nav horizon-nav clearbox" lay-filter="nav-level">
-                <div class="nav-left">
-                    <li class="layui-nav-item">
-                        <a href="javascript:removeClickState()">
-                            <i class="layui-icon layui-icon-shrink-right" style="font-size: 20px;"></i>
-                        </a>
-                    </li>
-                </div>
-                <div class="nav-right">
-                    <li class="layui-nav-item">
-                        <a href="javascript:removeClickState();"><i class="layui-icon layui-icon-notice"></i><span class="layui-badge">1</span></a>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:void(0);"><img src="../imgs/head_pic01.png" class="layui-nav-img"><span id="username">我</span></a>
-                        <dl class="layui-nav-child hover-bg">
-                            <!-- 自定义元素属性data-state代表点击时执行的功能 -->
-                            <dd><a href="javascript:removeClickState();" data-state="2"><i class="layui-icon layui-icon-edit"></i>修改信息</a></dd>
-                            <dd><a href="javascript:removeClickState();" data-state="0"><i class="layui-icon layui-icon-delete"></i>注销账号</a></dd>
-                            <dd><a href="javascript:removeClickState();" data-state="1"><i class="layui-icon layui-icon-logout"></i>安全退出</a></dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:removeClickState();"><i class="layui-icon layui-icon-set"></i>主题</a>
-                        <dl class="layui-nav-child nav-bgcolor">
-                            <!-- 自定义元素属性data-state代表点击时执行的功能 -->
-                            <dd><a href="javascript:;">粉红</a></dd>
-                            <dd><a href="javascript:;">艳蓝</a></dd>
-                            <dd><a href="javascript:;">橙色</a></dd>
-                            <dd><a href="javascript:;">默认</a></dd>
-                        </dl>
-                    </li>
-                </div>
-            </ul>
+        <section class="right clearbox">
+            <header>
+                <ul class="layui-nav horizon-nav clearbox" lay-filter="nav-level">
+                    <div class="nav-left">
+                        <li class="layui-nav-item">
+                            <a href="javascript:removeClickState()">
+                                <i class="layui-icon layui-icon-shrink-right" style="font-size: 20px;"></i>
+                            </a>
+                        </li>
+                    </div>
+                    <div class="nav-right">
+                        <li class="layui-nav-item">
+                            <a href="javascript:removeClickState();"><i class="layui-icon layui-icon-notice"></i><span class="layui-badge">1</span></a>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:void(0);"><img src="../imgs/head_pic01.png" class="layui-nav-img"><span id="username">我</span></a>
+                            <dl class="layui-nav-child hover-bg">
+                                <!-- 自定义元素属性data-state代表点击时执行的功能 -->
+                                <dd><a href="javascript:removeClickState();" data-state="2"><i class="layui-icon layui-icon-edit"></i>修改信息</a></dd>
+                                <dd><a href="javascript:removeClickState();" data-state="0"><i class="layui-icon layui-icon-delete"></i>注销账号</a></dd>
+                                <dd><a href="javascript:removeClickState();" data-state="1"><i class="layui-icon layui-icon-logout"></i>安全退出</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href="javascript:removeClickState();"><i class="layui-icon layui-icon-set"></i>主题</a>
+                            <dl class="layui-nav-child nav-bgcolor">
+                                <!-- 自定义元素属性data-state代表点击时执行的功能 -->
+                                <dd><a href="javascript:;">粉红</a></dd>
+                                <dd><a href="javascript:;">艳蓝</a></dd>
+                                <dd><a href="javascript:;">橙色</a></dd>
+                                <dd><a href="javascript:;">默认</a></dd>
+                            </dl>
+                        </li>
+                    </div>
+                </ul>
+            </header>
+            <iframe  src="userPage.html" width="100%" height="560px" frameborder="0" scrolling="auto"></iframe>
         </section>
         <script src="../util/layui/layui.js"></script>
         <script src="../js/index.js"></script>
