--- a/html/index.html
+++ b/html/index.html
@@ -16,11 +16,11 @@
                     <a href="javascript:;">主页</a></li>
                 <li class="layui-nav-item  layui-nav-itemed">
                     <a href="javascript:;">管理</a>
-                    <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">部门管理</a></dd>
-                        <dd><a href="javascript:;">职工管理</a></dd>
-                        <dd><a href="javascript:;">学员管理</a></dd>
-                        <dd><a href="javascript:;">物资管理</a></dd>
+                    <dl class="layui-nav-child" id="pageLink">
+                        <dd><a href="javascript:;" data-src="departmentPage.html">部门管理</a></dd>
+                        <dd><a href="javascript:;" data-src="userPage.html" class="layui-this">职工管理</a></dd>
+                        <dd><a href="javascript:;" data-src="studentPage.html">学员管理</a></dd>
+                        <dd><a href="javascript:;" data-src="goodsPage.html">物资管理</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="javascript:;">照片墙</a></li>
@@ -62,7 +62,7 @@
                     </div>
                 </ul>
             </header>
-            <iframe  src="userPage.html" width="100%" height="560px" frameborder="0" scrolling="auto"></iframe>
+            <iframe id="pages" src="userPage.html" width="100%" height="560px" frameborder="0" scrolling="auto"></iframe>
         </section>
         <script src="../util/layui/layui.js"></script>
         <script src="../js/index.js"></script>
