--- a/html/userPage.html
+++ b/html/userPage.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>职工管理</title>
         <link rel="stylesheet" href="../util/layui/css/layui.css">
-        <!-- <link rel="stylesheet" href="css/common.css"> -->
+        <link rel="stylesheet" href="../css/common.css">
         <link rel="stylesheet" href="../css/userPage.css">
         <script src="../util/jquery/jquery-3.4.0.js"></script>
     </head>
